finish css styling

--- a/index.html
+++ b/index.html
@@ -1,148 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/main.css" />
-		<link rel="icon" href="img/favicon-16x16.png" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap"
-			rel="stylesheet"
-		/>
-		<title>Backstage Talks Magazine</title>
-	</head>
-	<body>
-		<header>
-			<img src="img/logo.png" alt="logo" class="logo" />
-		</header>
-		<div class="section-container">
-			<section class="issue" id="issue6">
-				<img
-					src="img/backstagetalks_cover_issue_6.png"
-					alt="issue6"
-					class="issue__img"
-				/>
-				<p class="issue__number">Issue #6</p>
-				<a
-					href="https://brot.sk/products/backstage-talks-issue-6?_pos=2&_sid=1c5730cc8&_ss=r"
-					class="issue__purchase"
-					>BUY HERE</a
-				>
-				<p class="issue__store">
-					or in
-					<a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
-				</p>
-			</section>
-			<section class="issue" id="issue5">
-				<img
-					src="img/backstagetalks_cover_issue_5.png"
-					alt="issue5"
-					class="issue__img"
-				/>
-				<p class="issue__number">Issue #5</p>
-				<a
-					href="https://brot.sk/products/backstage-talks-5?_pos=3&_sid=1c5730cc8&_ss=r"
-					class="issue__purchase"
-					>BUY HERE</a
-				>
-				<p class="issue__store">
-					or in
-					<a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
-				</p>
-			</section>
-			<section class="issue" id="issue4">
-				<img
-					src="img/backstagetalks_cover_issue_4.png"
-					alt="issue5"
-					class="issue__img"
-				/>
-				<p class="issue__number">Issue #4 is sold out.</p>
-				<p class="issue__store">
-					If you are lucky, you may get the last pieces in
-					<a href="http://backstagetalks.com/stocklist.php"> selected stores</a
-					>.
-				</p>
-			</section>
-			<section class="issue" id="issue3">
-				<img
-					src="img/backstagetalks_cover_issue_3.png"
-					alt="issue5"
-					class="issue__img"
-				/>
-				<p class="issue__number">Issue #3</p>
-				<a
-					href="https://brot.sk/products/backstage-talks-3?_pos=4&_sid=1c5730cc8&_ss=r"
-					class="issue__purchase"
-					>BUY HERE</a
-				>
-				<p class="issue__store">
-					or in
-					<a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
-				</p>
-			</section>
-			<section class="issue" id="issue2">
-				<img
-					src="img/backstagetalks_cover_issue_2.png"
-					alt="issue5"
-					class="issue__img"
-				/>
-				<p class="issue__number">Issue #2</p>
-				<a
-					href="https://brot.sk/products/backstage-talks-2?_pos=1&_sid=1c5730cc8&_ss=r"
-					class="issue__purchase"
-					>BUY HERE</a
-				>
-				<p class="issue__store">
-					or in
-					<a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
-				</p>
-			</section>
-			<section class="issue" id="issue1">
-				<img
-					src="img/backstagetalks_cover_issue_1.png"
-					alt="issue5"
-					class="issue__img"
-				/>
-				<p class="issue__number">Issue #1 is sold out.</p>
-				<p class="issue__store">
-					If you are lucky, you may get the last pieces in
-					<a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
-				</p>
-			</section>
-		</div>
-		<footer class="footer">
-			<p class="footer__p">
-				Backstage Talks is a magazine of casual, but in depth dialogues on
-				design and business. Our decisions shape and influence this complex
-				world—to have a chance to make the right ones, we need to talk
-			</p>
-			<p class="footer__copyright">
-				&copy; 2023
-				<span class="underline"
-					><a href="http://milk.sk/">Published by studio Milk</a>
-				</span>
-			</p>
-			<div class="footer__contact">
-				<a href="https://backstagetalks.com/privacy-policy.php" class="privacy"
-					>Privacy Policy</a
-				>
-				<a href="info@backstagetalks.com" class="address"
-					>info@backstagetalks.com</a
-				>
-			</div>
-		</footer>
-		<div class="issue-reference">
-			<ul>
-				<li><a href="#issue6">Issue #6</a></li>
-				<li><a href="#issue5">Issue #5</a></li>
-				<li><a href="#issue4">Issue #4</a></li>
-				<li><a href="#issue3">Issue #3</a></li>
-				<li><a href="#issue2">Issue #2</a></li>
-				<li><a href="#issue1">Issue #1</a></li>
-			</ul>
-		</div>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="icon" href="img/favicon-16x16.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <title>Backstage Talks Magazine</title>
+  </head>
+  <body>
+    <header>
+      <img src="img/logo.png" alt="logo" class="logo" />
+    </header>
+    <div class="section-container">
+      <section class="issue" id="issue6">
+        <img
+          src="img/backstagetalks_cover_issue_6.png"
+          alt="issue6"
+          class="issue__img"
+        />
+        <p class="issue__number">Issue #6</p>
+        <a
+          href="https://brot.sk/products/backstage-talks-issue-6?_pos=2&_sid=1c5730cc8&_ss=r"
+          class="issue__purchase"
+          >BUY HERE</a
+        >
+        <p class="issue__store">
+          or in
+          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
+        </p>
+      </section>
+      <section class="issue" id="issue5">
+        <img
+          src="img/backstagetalks_cover_issue_5.png"
+          alt="issue5"
+          class="issue__img"
+        />
+        <p class="issue__number">Issue #5</p>
+        <a
+          href="https://brot.sk/products/backstage-talks-5?_pos=3&_sid=1c5730cc8&_ss=r"
+          class="issue__purchase"
+          >BUY HERE</a
+        >
+        <p class="issue__store">
+          or in
+          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
+        </p>
+      </section>
+      <section class="issue" id="issue4">
+        <img
+          src="img/backstagetalks_cover_issue_4.png"
+          alt="issue5"
+          class="issue__img"
+        />
+        <p class="issue__number">Issue #4 is sold out.</p>
+        <p class="issue__store">
+          If you are lucky, you may get the last pieces in
+          <a href="http://backstagetalks.com/stocklist.php"> selected stores</a
+          >.
+        </p>
+      </section>
+      <section class="issue" id="issue3">
+        <img
+          src="img/backstagetalks_cover_issue_3.png"
+          alt="issue5"
+          class="issue__img"
+        />
+        <p class="issue__number">Issue #3</p>
+        <a
+          href="https://brot.sk/products/backstage-talks-3?_pos=4&_sid=1c5730cc8&_ss=r"
+          class="issue__purchase"
+          >BUY HERE</a
+        >
+        <p class="issue__store">
+          or in
+          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
+        </p>
+      </section>
+      <section class="issue" id="issue2">
+        <img
+          src="img/backstagetalks_cover_issue_2.png"
+          alt="issue5"
+          class="issue__img"
+        />
+        <p class="issue__number">Issue #2</p>
+        <a
+          href="https://brot.sk/products/backstage-talks-2?_pos=1&_sid=1c5730cc8&_ss=r"
+          class="issue__purchase"
+          >BUY HERE</a
+        >
+        <p class="issue__store">
+          or in
+          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
+        </p>
+      </section>
+      <section class="issue" id="issue1">
+        <img
+          src="img/backstagetalks_cover_issue_1.png"
+          alt="issue5"
+          class="issue__img"
+        />
+        <p class="issue__number">Issue #1 is sold out.</p>
+        <p class="issue__store">
+          If you are lucky, you may get the last pieces in
+          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
+        </p>
+      </section>
+    </div>
+    <footer class="footer">
+      <p class="footer__p">
+        Backstage Talks is a magazine of casual, but in depth dialogues on
+        design and business. Our decisions shape and influence this complex
+        world—to have a chance to make the right ones, we need to talk
+      </p>
+      <p class="footer__copyright">
+        &copy; 2023
+        <span class="underline"
+          ><a href="http://milk.sk/">Published by studio Milk</a>
+        </span>
+      </p>
+      <div class="footer__contact">
+        <a href="https://backstagetalks.com/privacy-policy.php" class="privacy"
+          >Privacy Policy</a
+        >
+      </div>
+    </footer>
+	<div class="email">
+		<a href="info@backstagetalks.com" class="address"
+		  >info@backstagetalks.com</a
+		>
+	</div>
+    <div class="issue-reference">
+      <ul>
+        <li><a href="#issue6">Issue #6</a></li>
+        <li><a href="#issue5">Issue #5</a></li>
+        <li><a href="#issue4">Issue #4</a></li>
+        <li><a href="#issue3">Issue #3</a></li>
+        <li><a href="#issue2">Issue #2</a></li>
+        <li><a href="#issue1">Issue #1</a></li>
+      </ul>
+    </div>
+  </body>
 </html>
