fix intersection observer in appjs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <img src="img/logo.png" alt="logo" class="logo" />
     </header>
     <div class="section-container">
-      <section class="issue" id="issue6">
+      <section class="issue" id="issue6" data-color ="#fff">
         <img
           src="img/backstagetalks_cover_issue_6.png"
           alt="issue6"
@@ -36,7 +36,7 @@
           <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
         </p>
       </section>
-      <section class="issue" id="issue5">
+      <section class="issue" id="issue5" data-color ="#00c1b5">
         <img
           src="img/backstagetalks_cover_issue_5.png"
           alt="issue5"
@@ -53,7 +53,7 @@
           <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
         </p>
       </section>
-      <section class="issue" id="issue4">
+      <section class="issue" id="issue4" data-color ="#ff651a">
         <img
           src="img/backstagetalks_cover_issue_4.png"
           alt="issue5"
@@ -66,7 +66,7 @@
           >.
         </p>
       </section>
-      <section class="issue" id="issue3">
+      <section class="issue" id="issue3" data-color="#ffbe00">
         <img
           src="img/backstagetalks_cover_issue_3.png"
           alt="issue5"
@@ -83,7 +83,7 @@
           <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
         </p>
       </section>
-      <section class="issue" id="issue2">
+      <section class="issue" id="issue2" data-color="#1d3fbb">
         <img
           src="img/backstagetalks_cover_issue_2.png"
           alt="issue5"
@@ -100,7 +100,7 @@
           <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
         </p>
       </section>
-      <section class="issue" id="issue1">
+      <section class="issue" id="issue1" data-color="#e30512">
         <img
           src="img/backstagetalks_cover_issue_1.png"
           alt="issue5"
@@ -146,5 +146,7 @@
         <li><a href="#issue1">Issue #1</a></li>
       </ul>
     </div>
+
+	<script src="app.js"></script>
   </body>
 </html>
