fullpage web done

--- a/index.html
+++ b/index.html
@@ -138,12 +138,12 @@
 	</div>
     <div class="issue-reference">
       <ul>
-        <li><a href="#issue6">Issue #6</a></li>
-        <li><a href="#issue5">Issue #5</a></li>
-        <li><a href="#issue4">Issue #4</a></li>
-        <li><a href="#issue3">Issue #3</a></li>
-        <li><a href="#issue2">Issue #2</a></li>
-        <li><a href="#issue1">Issue #1</a></li>
+        <li><a href="#issue6" id="issue-ref">Issue #6</a></li>
+        <li><a href="#issue5" id="issue-ref">Issue #5</a></li>
+        <li><a href="#issue4" id="issue-ref">Issue #4</a></li>
+        <li><a href="#issue3" id="issue-ref">Issue #3</a></li>
+        <li><a href="#issue2" id="issue-ref">Issue #2</a></li>
+        <li><a href="#issue1" id="issue-ref">Issue #1</a></li>
       </ul>
     </div>
 
