anchor color fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         >
         <p class="issue__store">
           or in
-          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
+          <a href="http://backstagetalks.com/stocklist.php" id="selected-stores">selected stores</a>.
         </p>
       </section>
       <section class="issue" id="issue5" data-color ="#00c1b5">
@@ -51,7 +51,7 @@
         >
         <p class="issue__store">
           or in
-          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
+          <a href="http://backstagetalks.com/stocklist.php" id="selected-stores">selected stores</a>.
         </p>
       </section>
       <section class="issue" id="issue4" data-color ="#ff651a">
@@ -63,7 +63,7 @@
         <p class="issue__number">Issue #4 is sold out.</p>
         <p class="issue__store">
           If you are lucky, you may get the last pieces in
-          <a href="http://backstagetalks.com/stocklist.php"> selected stores</a
+          <a href="http://backstagetalks.com/stocklist.php" id="selected-stores"> selected stores</a
           >.
         </p>
       </section>
@@ -81,7 +81,7 @@
         >
         <p class="issue__store">
           or in
-          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
+          <a href="http://backstagetalks.com/stocklist.php" id="selected-stores">selected stores</a>.
         </p>
       </section>
       <section class="issue" id="issue2" data-color="#1d3fbb">
@@ -98,7 +98,7 @@
         >
         <p class="issue__store">
           or in
-          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
+          <a href="http://backstagetalks.com/stocklist.php" id="selected-stores">selected stores</a>.
         </p>
       </section>
       <section class="issue" id="issue1" data-color="#e30512">
@@ -110,7 +110,7 @@
         <p class="issue__number">Issue #1 is sold out.</p>
         <p class="issue__store">
           If you are lucky, you may get the last pieces in
-          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
+          <a href="http://backstagetalks.com/stocklist.php" id="selected-stores">selected stores</a>.
         </p>
       </section>
     </div>
