final anchor bug fixed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <img src="img/logo.png" alt="logo" class="logo" />
     </header>
     <div class="section-container">
-      <section class="issue" id="issue6" data-color ="#fff">
+      <section class="issue color-correction1" id="issue6" data-color ="#fff">
         <img
           src="img/backstagetalks_cover_issue_6.png"
           alt="issue6"
@@ -34,7 +34,7 @@
         >
         <p class="issue__store">
           or in
-          <a href="http://backstagetalks.com/stocklist.php" id="selected-stores">selected stores</a>.
+          <a href="http://backstagetalks.com/stocklist.php">selected stores</a>.
         </p>
       </section>
       <section class="issue" id="issue5" data-color ="#00c1b5">
